# cyberbiz-shopping-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py  context.py  dependencies.py  mcp_instance.py  middleware.py  server.py
src/auth/: __init__.py  custom_token_verifier.py
src/models/: customer.py  order.py  product.py
src/repositories/: product_repository.py
src/services/: cyberbiz_bigquery_client.py  cyberbiz_client.py  embedding_client.py
src/tools/: __init__.py  cancel_order.py  check_order.py  check_purchase_feasibility.py  discover_products.py  handle_after_sales.py  modify_order.py  place_order.py
src/utils/: logger.py
